setup eslint prettier

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-@import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import 'tailwindcss';
 
 @theme {
-  --font-primary: "Montserrat", sans-serif;
+  --font-primary: 'Montserrat', sans-serif;
   --color-primary: #000; /* Adidas Black */
   --color-secondary: #fff; /* Adidas White */
   --color-card-product-light: #767677;
